# django-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_name}}/: .flake8  CHANGELOG.md  CONTRIBUTORS.md  Procfile  README.md  manage.py  mypy.ini  pyproject.toml  pytest.ini
{{ cookiecutter.project_name}}/docs_sources/mkdocs/: index.md  mkdocs.yml
{{ cookiecutter.project_name}}/docs_sources/sphinx/: conf.py  index.rst
{{ cookiecutter.project_name}}/templates/: security.txt
{{ cookiecutter.project_name}}/users/: admin.py  context_processors.py  models.py  serializers.py  urls.py  views.py
{{ cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: asgi.py  checks.py  settings.py  urls.py  views.py  wsgi.py
