[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{ cookiecutter.version }}"
description = "{{cookiecutter.description}}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.email }}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"
homepage = "{{ cookiecutter.domain_name }}"
documentation = ""
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name|lower|replace(' ', '-')|replace('_', '-') }}/"
keywords = ["{{ cookiecutter.project_slug }}"]

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"
{% if cookiecutter.password_hashing_algorithm == 'Argon2' -%}argon2-cffi = "^20.1.0"{% elif cookiecutter.password_hashing_algorithm == 'bcrypt' -%}bcrypt = "^3.1.7"{%- endif %}
confusable_homoglyphs = "^3.2.0"
dj-database-url = "^0.5"
dj-rest-auth = {extras = ["with_social"], version = "^1.1.0"}
django = "^3.0"
djangorestframework = "^3.11.0"
djangorestframework-simplejwt = "^4.4.0"
django-axes = "^5.4.1"
django-cors-headers = "^3.4.0"
django-filter = "^2.3"
django-import-export = "2.2"
django-storages = {extras = ["dropbox"], version = "^1.9"}
django-simple-history = "^2.11.0"
drf-yasg = "^1.17"
gunicorn = "^20.0"
Pillow = "^7.2"
psycopg2-binary = "^2.8"
python-decouple = "^3.3"
pwned-passwords-django = "^1.4"
whitenoise = {extras = ["brotli"], version = "^5.1"}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = {extras = ["toml"], version = "^5.2"}
django-coverage-plugin = "^1.8"
django-debug-toolbar = "^2.2"
darglint = "^1.5.1"
flake8 = "^3.8.3"
flake8-annotations = "^2.3.0"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
isort = {extras = ["pyproject"], version = "^5.1.1"}
mypy = "^0.782"
{% if cookiecutter.docs_tool == 'mkdocs' -%}mkdocs = "^1.1.2"{% elif cookiecutter.docs_tool == 'sphinx' -%}Sphinx = "^3.0"{%- endif %}
{% if cookiecutter.docs_tool == 'mkdocs' -%}mkdocs-material = "^5.4.0"{% elif cookiecutter.docs_tool == 'sphinx' -%}sphinx-rtd-theme = "^0.4"{%- endif %}
{% if cookiecutter.docs_tool == 'mkdocs' -%}mkdocstrings = "^0.12.1"{%- endif %}
{% if cookiecutter.docs_tool == 'mkdocs' -%}mkdocs-minify-plugin = "^0.3.0"{%- endif %}
{% if cookiecutter.docs_tool == 'mkdocs' -%}mkdocs-git-revision-date-localized-plugin = "^0.7"{%- endif %}
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pytest-django = "^3.9.0"
radon = "^4.1.0"
safety = "^1.9.0"
xdoctest = "^0.13.0"

[tool.coverage.run]
branch = true
source = ["{{ cookiecutter.project_slug }}"]
plugins = "django_coverage_plugin"

[tool.coverage.report]
show_missing = true
fail_under = 84

[tool.isort]
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
line_length = 80

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
