[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{ cookiecutter.version }}"
description = "{{cookiecutter.description}}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.email }}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"
homepage = "{{ cookiecutter.domain_name }}"
documentation = ""
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name|lower|replace(' ', '-')|replace('_', '-') }}/"
keywords = ["{{ cookiecutter.project_slug }}"]

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"
{% if cookiecutter.password_hashing_algorithm == 'Argon2' -%}argon2-cffi = "^20.1.0"{% elif cookiecutter.password_hashing_algorithm == 'bcrypt' -%}bcrypt = "^3.2.0"{%- endif %}
better-exceptions = "^0.3"
confusable_homoglyphs = "^3.2.0"
dj-database-url = "^0.5"
django = "^3.2"
django-axes = "^5.14"
django-filter = "^2.4"
django-import-export = "2.5"
django-storages = {extras = ["dropbox"], version = "^1.11"}
django-zen-queries = "^2.0"
gunicorn = "^20.1"
Pillow = "^8.2"
psycopg2-binary = "^2.8"
pyinstrument = "^3.4"
python-decouple = "^3.4"
pwned-passwords-django = "^1.4"
whitenoise = {extras = ["brotli"], version = "^5.2"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = {extras = ["toml"], version = "^5.5"}
django-coverage-plugin = "^1.8"
django-debug-toolbar = "^3.2"
darglint = "^1.8"
flake8 = "^3.9"
flake8-annotations = "^2.6"
flake8-bandit = "^2.1"
flake8-black = "^0.2"
flake8-bugbear = "^21.4"
flake8-docstrings = "^1.6"
flake8-import-order = "^0.18"
isort = "^5.8"
mypy = "^0.812"
{% if cookiecutter.docs_tool == 'mkdocs' -%}mkdocs = "^1.1"{% elif cookiecutter.docs_tool == 'sphinx' -%}Sphinx = "^3.5"{%- endif %}
{% if cookiecutter.docs_tool == 'mkdocs' -%}mkdocs-material = "^7.1"{% elif cookiecutter.docs_tool == 'sphinx' -%}sphinx-rtd-theme = "^0.5"{%- endif %}
{% if cookiecutter.docs_tool == 'mkdocs' -%}mkdocstrings = "^0.15"{%- endif %}
{% if cookiecutter.docs_tool == 'mkdocs' -%}mkdocs-minify-plugin = "^0.4"{%- endif %}
{% if cookiecutter.docs_tool == 'mkdocs' -%}mkdocs-git-revision-date-localized-plugin = "^0.9"{%- endif %}
{% if cookiecutter.docs_tool == 'mkdocs' -%}mkdocs-git-authors-plugin = "^0.3"{%- endif %}
pytest = "^6.2"
pytest-cov = "^2.11"
pytest-django = "^4.2"
radon = "^4.5"
safety = "^1.10"
xdoctest = "^0.15"

[tool.coverage.run]
branch = true
source = ["{{ cookiecutter.project_slug }}"]
plugins = "django_coverage_plugin"

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.isort]
profile="black"

[tool.pytest.ini_options]
minversion = "6.0"
DJANGO_SETTINGS_MODULE="{{cookiecutter.project_slug|lower|replace(' ', '_')|replace('-', '_')}}.settings"
python_files = "tests.py test_*.py *_tests.py"
addopts = "--cov"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
